--- a/ToDoList/tsconfig.json
+++ b/ToDoList/tsconfig.json
@@ -16,7 +16,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "tsx": "react-tsx",
+    "types": ["react/next", "react-dom/next"]
   },
   "include": [
     "./src"
