--- a/ToDoList/package.json
+++ b/ToDoList/package.json
@@ -6,17 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "devts": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules ./app.ts",
+    "builts": "tsc"
   },
   "dependencies": {
+    "@types/express": "^4.17.14",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongodb": "^4.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^2.2.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3",
     "vite": "^3.2.3"
   }
