--- a/ToDoList/package.json
+++ b/ToDoList/package.json
@@ -17,13 +17,15 @@
     "mongodb": "^4.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/react-transition-group": "^4.4.5",
     "@vitejs/plugin-react": "^2.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3",
