--- a/ToDoList/package.json
+++ b/ToDoList/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "mongodb": "^4.12.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.3.7",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-transition-group": "^4.4.5"
